--- a/style.css
+++ b/style.css
@@ -2,23 +2,36 @@
     font-family: 'Ubuntu Mono', monospace;
 
 }
-.kenburns-container {
+/* .fondecrans {
     position: relative;
     overflow: hidden;
-  }
+  } */
 
   .kenburns-bg {
     width: 100%;
-    height: 100vh;
+    height: auto;
     position: absolute;
     top: 0;
     left: 0;
-    
   }
 
   .content {
     position: relative;
-    z-index: 1;
+    
     text-align: center;
     padding: 50px;
   }
+  .titre {
+    opacity: 0;
+    animation: fadeIn 6s ease-in-out forwards;
+    -webkit-animation: fadeIn 6s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
